# Library-Application

./: Book.cpp  CMakeLists.txt  Date.cpp  Date.h  Lib.h  LibApp.h  LibAppMain.cpp  Library Management System.sln  Library Management System.vcxproj  Library Management System.vcxproj.filters  Menu.cpp  Menu.h  Publication.cpp  Publication.h  PublicationSelector.cpp  PublicationSelector.h  Streamable.cpp  Streamable.h  Utils.cpp  Utils.h  readme.md
Library .5808e7e6/x64/Debug/: Library Management System.exe.recipe  Library Management System.ilk  vc143.idb
Library .5808e7e6/x64/Debug/Library .5808e7e6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Library Management System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
